# EnumifyStruct

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
crates/enumify_macro/: Cargo.toml
crates/enumify_macro/src/: enum_struct.rs  lib.rs  test.rs
src/: lib.rs
src/enumify_macro/src/: lib.rs
tests/: applicable_generic.rs
